prover-ray/zkcdriver/testdata/synced/invalid/memory_13.zkc
//error:3:1-39:duplicate declaration
memory buffer(addr:u16) -> (bytes:u8)
memory buffer(addr:u32) -> (words:u16)
